# HIVEMIND

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  COOLIFY_DEPLOYMENT.md  COOLIFY_DEPLOYMENT_GUIDE.md  CROSS_PLATFORM_SYNC_SPEC.md  Caddyfile  Caddyfile.api  Caddyfile.core  DATABASE_SETUP.md  Dockerfile.control-plane  Dockerfile.production  EMBEDDING_INTEGRATION_COMPLETE.md  FILTER_THEN_RANK_VERIFICATION.md  INSTALL.md  LICENSE.research.md  LOCAL_RUNBOOK.md  LOCAL_TESTING_GUIDE.md  MCP_API_AUTH_FIXED.md  MCP_CONFIG_UPDATED.md  MCP_RESTARTED.md  MCP_TOOL_FIXES.md  MEMORY.md  PAGEINDEX_README.md  PRIORITY3_PHASE1_COMPLETE.md  QDRANT_MISTRAL_COMPLETE.md  QDRANT_SETUP_COMPLETE.md  QUICKSTART.md  README.md  SSL_MANUAL.md  THREE_TIER_IMPLEMENTATION_SUMMARY.md  UI_GUIDE.md  USAGE_TRACKING_IMPLEMENTATION.md  antigravity-probe.mjs  claude-mcp-server.js  client.html  code-review.md  coolify.yaml  docker-compose.caddy.yml  (+36 more)
AgentScope-BLAIQ/: .dockerignore  README.md  pyproject.toml
AgentScope-BLAIQ/deployment/: .env.example  Dockerfile  bootstrap.py  docker-compose.coolify.yml
AgentScope-BLAIQ/frontend/: .env.example  index.html  package-lock.json  package.json  vite.config.js
AgentScope-BLAIQ/frontend/src/: App.jsx  index.css
AgentScope-BLAIQ/src/agentscope_blaiq/: __init__.py
AgentScope-BLAIQ/src/agentscope_blaiq/agents/: __init__.py  (+7 more)
AgentScope-BLAIQ/tests/: test_app_runtime.py  test_clarification.py  test_contracts.py  test_deployment.py  test_docs_tools.py  test_e2e_workflow.py  test_hivemind_mcp.py  test_research.py  test_strategic_catalog.py  test_workflows.py
(+809 files in other folders)
