[project]
name = "agentscope-blaiq"
version = "0.1.0"
description = "API-first multi-agent runtime for BLAIQ built around AgentScope-style orchestration."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "agentscope>=1.0.0",
    "asyncpg>=0.30.0",
    "aiosqlite>=0.20.0",
    "beautifulsoup4>=4.12.3",
    "fastapi>=0.118.0",
    "greenlet>=3.2.0",
    "httpx>=0.28.1",
    "litellm>=1.68.0",
    "pydantic>=2.11.0",
    "pydantic-settings>=2.6.1",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.20",
    "redis>=5.0.0",
    "sse-starlette>=2.1.3",
    "sqlalchemy>=2.0.35",
    "uvicorn>=0.37.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agentscope_blaiq"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
